--- a/.github/workflows/cloc.yml
+++ b/.github/workflows/cloc.yml
@@ -18,10 +18,10 @@ jobs:
 
       - name: Fetch Repositories and Count LOC
         env:
-          METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
+          CLOC_TOKEN: ${{ secrets.CLOC_TOKEN }}
         run: |
           echo "Fetching repositories..."
-          REPOS=$(curl -s -H "Authorization: token $METRICS_TOKEN" \
+          REPOS=$(curl -s -H "Authorization: token $CLOC_TOKEN" \
             "https://api.github.com/user/repos?per_page=100" | jq -r '.[].clone_url')
 
           TOTAL_LOC=0
