--- a/.github/workflows/cloc.yml
+++ b/.github/workflows/cloc.yml
@@ -59,12 +59,13 @@ jobs:
       - name: Generate SVG Badge
         run: |
           LOC_VALUE=$(echo "$LOC" | awk '{ printf "%'"'"'d\n", $1 }')  # Formats with thousands separator
-          echo '<svg xmlns="http://www.w3.org/2000/svg" width="150" height="30">
-          <rect width="100%" height="100%" fill="#555"/>
-          <rect x="100" width="50" height="30" fill="#007ec6"/>
-          <text x="10" y="20" fill="white" font-family="Arial" font-size="14">Lines of Code</text>
-          <text x="115" y="20" fill="white" font-family="Arial" font-size="14">'$LOC_VALUE'</text>
+          echo '<svg xmlns="http://www.w3.org/2000/svg" width="250" height="30">
+            <rect width="180" height="30" fill="#555"/>
+            <rect x="180" width="70" height="30" fill="#007ec6"/>
+            <text x="10" y="20" fill="white" font-family="Arial" font-size="14">Contributed Lines of Code</text>
+            <text x="215" y="20" fill="white" font-family="Arial" font-size="14" text-anchor="middle">'$LOC_VALUE'</text>
           </svg>' > loc_badge.svg
+
 
       - name: Commit and Push Badge
         run: |
