--- a/.github/workflows/cloc.yml
+++ b/.github/workflows/cloc.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          git pull --rebase
           git add loc_badge.svg
           git commit -m "Update LOC badge" || echo "No changes to commit"
           git push
